Added DB Context, Products Modelsand scafolded

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+  {
+    "ConnectionStrings": {
+      "KhumaloCraftDEV": "Data Source=labVMH8OX\\SQLEXPRESS;Initial Catalog=KhumaloCraftDB_P2;Integrated Security=True;TrustServerCertificate=True"
+    },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
