Azure Deploy Creds

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
   {
     "ConnectionStrings": {
-      "KhumaloCraftDEV": "Data Source=labVMH8OX\\SQLEXPRESS;Initial Catalog=KhumaloCraftDB_P2;Integrated Security=True;TrustServerCertificate=True"
+      "KhumaloCraftDEV": "Data Source=labVMH8OX\\SQLEXPRESS;Initial Catalog=KhumaloCraftDB_P2;Integrated Security=True;TrustServerCertificate=True",
+      "KhumaloCraftLive": "Server=tcp:st10251759server.database.windows.net,1433;Initial Catalog=KhumaloCraftDB_P2;Persist Security Info=False;User ID=adminator;Password=@A@Z%wqwQ&O70&IV;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
 
     "Logging": {
